--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "orgomart-react",
+  "name": "musu-tropicals",
   "version": "0.1.0",
   "private": true,
   "basename": "/",
-  "homepage": "https://orgomart.uitheme.net/",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
