--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "private": true,
   "basename": "/",
   "homepage": "/",
+  "engines": {
+    "node": "16.13.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "google-map-react": "^2.1.10",
+    "history": "^5.3.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.4",
+    "react-router": "^6.4.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
