--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.1.3",
     "bootstrap": "^5.1.3",
     "google-map-react": "^2.1.10",
     "history": "^5.3.0",
     "node-sass": "^6.0.1",
+    "qs": "^6.11.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
